Use Java 17 language features
instanceof pattern matching

Formatted strings