@@ -2,6 +2,7 @@ package jenkins.plugins.git;
 
 import hudson.remoting.VirtualChannel;
 import java.io.IOException;
+import java.io.Serial;
 import java.util.logging.Logger;
 import org.eclipse.jgit.lib.Repository;
 import org.eclipse.jgit.lib.StoredConfig;
@@ -13,6 +14,7 @@ import org.jenkinsci.plugins.gitclient.RepositoryCallback;
 class UnsetHooks implements RepositoryCallback<Object> {
     private static final Logger LOGGER = Logger.getLogger(UnsetHooks.class.getName());
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     @Override
@@ -20,7 +22,7 @@ class UnsetHooks implements RepositoryCallback<Object> {
         final StoredConfig repoConfig = repo.getConfig();
         final String val = repoConfig.getString("core", null, "hooksPath");
         if (val != null && !val.isEmpty() && !DisableHooks.DISABLED_NIX.equals(val) && !DisableHooks.DISABLED_WIN.equals(val)) {
-            LOGGER.warning(() -> String.format("core.hooksPath explicitly set to %s and will be left intact on %s.", val, repo.getDirectory()));
+            LOGGER.warning(() -> "core.hooksPath explicitly set to %s and will be left intact on %s.".formatted(val, repo.getDirectory()));
         } else {
             repoConfig.unset("core", null, "hooksPath");
             repoConfig.save();
